// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/QuestionMarkTooltip Default 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <p
    className="inline-block transform -translate-y-0.5"
  >
    <button
      aria-describedby="one-tooltip"
      className="rounded-full w-4 h-4 text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring"
    >
      <span
        aria-hidden={true}
      >
        ?
      </span>
      <span
        className="sr-only"
      >
        title one
      </span>
    </button>
    <span
      className="undefined absolute top-7 left-2 max-w-[224px] w-max h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
      id="one-tooltip"
      role="tooltip"
    >
      I am a tooltip, I explain things
    </span>
  </p>
</h3>
`;

exports[`Storyshots UI Elements/QuestionMarkTooltip Long Content 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <p
    className="inline-block transform -translate-y-0.5"
  >
    <button
      aria-describedby="two-tooltip"
      className="rounded-full w-4 h-4 text-[10px] bg-gray-50 text-gray-600 border border-gray-500 focus:outline-none focus:ring"
    >
      <span
        aria-hidden={true}
      >
        ?
      </span>
      <span
        className="sr-only"
      >
        title two
      </span>
    </button>
    <span
      className="undefined absolute top-7 left-2 max-w-[224px] w-max h-auto p-4 bg-gray-900 text-white text-xs whitespace-normal"
      id="two-tooltip"
      role="tooltip"
    >
      <div>
        <p>
          Hi there.
        </p>
        <p>
          I am also 
          <em>
            tooltip content
          </em>
          .
        </p>
        <p>
          Only this time with 
          <strong>
            more content 
          </strong>
           and using several DOM nodes as the content.
        </p>
      </div>
    </span>
  </p>
</h3>
`;
